--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,37 @@
-aiohttp
-aiosqlite
-discord.py
-python-dotenv
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+discord.py==2.5.2
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.45
+langchain-ollama==0.2.3
+langsmith==0.3.16
+multidict==6.2.0
+ollama==0.4.7
+orjson==3.10.15
+packaging==24.2
+propcache==0.3.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+tenacity==9.0.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+yarl==1.18.3
+zstandard==0.23.0
