--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
   "prefix": "$",
-  "invite_link": "YOUR_BOT_INVITE_LINK_HERE"
+  "invite_link": "YOUR_BOT_INVITE_LINK_HERE",
+  "github_repo_url": "https://github.com/blacksmithop/MandanGPT"
 }
