--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,17 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 discord.py==2.5.2
 frozenlist==1.5.0
+greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jsonpatch==1.33
 jsonpointer==3.0.0
+langchain==0.3.21
 langchain-core==0.3.45
 langchain-ollama==0.2.3
+langchain-text-splitters==0.3.7
 langsmith==0.3.16
 multidict==6.2.0
 ollama==0.4.7
@@ -30,6 +33,7 @@ PyYAML==6.0.2
 requests==2.32.3
 requests-toolbelt==1.0.0
 sniffio==1.3.1
+SQLAlchemy==2.0.39
 tenacity==9.0.0
 typing_extensions==4.12.2
 urllib3==2.3.0
