feat: Add Huggingface llvm support (wip)

--- a/example.env
+++ b/example.env
@@ -21,3 +21,6 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_VERSION=
 AZURE_CHAT_MODEL=
 AZURE_EMBEDDINGS_MODEL=
+
+# Huggingface
+HUGGING_FACE_HUB_TOKEN=
