--- a/example.env
+++ b/example.env
@@ -2,13 +2,18 @@
 DISCORD_BOT_TOKEN=
 
 # LLM
-# Can be ollama, gemini, openai
+# Can be ollama, vllm, gemini, openai
 LLM_PROVIDER=
 
 # Ollama
 OLLAMA_URL=
 OLLAMA_CHAT_MODEL=
 OLLAMA_EMBEDDINGS_MODEL=
+
+# Vllm + Model2Vec
+VLLM_URL=
+VLLM_CHAT_MODEL=
+MODEL2VEC_EMBEDDING_MODEL=
 
 # Gemini (Google)
 GOOGLE_API_KEY=
