--- a/requirements.txt
+++ b/requirements.txt
@@ -2,40 +2,127 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
 aiosqlite==0.21.0
+airportsdata==20250224
 annotated-types==0.7.0
 anyio==4.9.0
+astor==0.8.1
 attrs==25.3.0
+blake3==1.0.4
+cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+colorama==0.4.6
+compressed-tensors==0.9.2
+dataclasses-json==0.6.7
+depyf==0.18.0
+dill==0.3.9
 discord.py==2.5.2
+diskcache==5.6.3
+distro==1.9.0
+dnspython==2.7.0
+einops==0.8.1
+email_validator==2.2.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+filelock==3.18.0
 frozenlist==1.5.0
+fsspec==2025.3.2
+gguf==0.10.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
+httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.2
 idna==3.10
+importlib_metadata==8.6.1
+interegular==0.3.3
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.21
-langchain-core==0.3.45
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-core==0.3.51
 langchain-ollama==0.2.3
-langchain-text-splitters==0.3.7
+langchain-text-splitters==0.3.8
 langsmith==0.3.16
+lark==1.2.2
+lm-format-enforcer==0.10.11
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mistral_common==1.5.4
+model2vec==0.4.1
+mpmath==1.3.0
+msgspec==0.19.0
 multidict==6.2.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.11.1.4
+numpy==2.2.4
 ollama==0.4.7
+openai==1.71.0
+opencv-python-headless==4.11.0.86
 orjson==3.10.15
+outlines==0.1.11
+outlines_core==0.1.26
 packaging==24.2
+partial-json-parser==0.2.1.1.post5
+pillow==11.1.0
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.21.1
 propcache==0.3.0
+protobuf==6.30.2
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pycountry==24.6.1
 pydantic==2.10.6
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
+Pygments==2.19.1
 python-dotenv==1.0.1
+python-json-logger==3.3.0
+python-multipart==0.0.20
 PyYAML==6.0.2
+pyzmq==26.4.0
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rich==14.0.0
+rich-toolkit==0.14.1
+rpds-py==0.24.0
+safetensors==0.5.3
+scipy==1.15.2
+sentencepiece==0.2.0
+shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.39
+starlette==0.46.1
+sympy==1.13.1
 tenacity==9.0.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.51.1
+typer==0.15.2
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==2.3.0
+uvicorn==0.34.0
+vllm==0.8.3
+watchfiles==1.0.5
+websockets==15.0.1
 yarl==1.18.3
+zipp==3.21.0
 zstandard==0.23.0
