--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,17 @@ email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 filelock==3.18.0
+filetype==1.2.0
 frozenlist==1.5.0
 fsspec==2025.3.2
 gguf==0.10.0
+google-ai-generativelanguage==0.6.17
+google-api-core==2.24.2
+google-auth==2.39.0
+googleapis-common-protos==1.70.0
 greenlet==3.1.1
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -49,7 +56,8 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 langchain==0.3.23
 langchain-community==0.3.21
-langchain-core==0.3.51
+langchain-core==0.3.52
+langchain-google-genai==2.1.3
 langchain-ollama==0.2.3
 langchain-text-splitters==0.3.8
 langsmith==0.3.16
@@ -68,7 +76,7 @@ mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 ninja==1.11.1.4
-numpy==2.2.4
+numpy
 ollama==0.4.7
 openai==1.71.0
 opencv-python-headless==4.11.0.86
@@ -81,13 +89,16 @@ pillow==11.1.0
 prometheus-fastapi-instrumentator==7.1.0
 prometheus_client==0.21.1
 propcache==0.3.0
-protobuf==6.30.2
+proto-plus==1.26.1
+protobuf==5.29.4
 psutil==7.0.0
 py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycountry==24.6.1
-pydantic==2.10.6
+pydantic==2.11.3
 pydantic-settings==2.8.1
-pydantic_core==2.27.2
+pydantic_core==2.33.1
 Pygments==2.19.1
 python-dotenv==1.0.1
 python-json-logger==3.3.0
@@ -101,6 +112,7 @@ requests-toolbelt==1.0.0
 rich==14.0.0
 rich-toolkit==0.14.1
 rpds-py==0.24.0
+rsa==4.9.1
 safetensors==0.5.3
 scipy==1.15.2
 sentencepiece==0.2.0
@@ -117,6 +129,7 @@ tqdm==4.67.1
 transformers==4.51.1
 typer==0.15.2
 typing-inspect==0.9.0
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
