--- a/requirements.txt
+++ b/requirements.txt
@@ -133,7 +133,7 @@ typing-inspection==0.4.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 uvicorn==0.34.0
-vllm==0.8.3
+# vllm==0.8.3
 watchfiles==1.0.5
 websockets==15.0.1
 yarl==1.18.3
