feat: Add invite link

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "prefix": "$",
-  "invite_link": "YOUR_BOT_INVITE_LINK_HERE",
+  "invite_link": "https://discord.com/oauth2/authorize?client_id=1233258905157767168&scope=bot&permissions=563368716257344",
   "github_repo_url": "https://github.com/blacksmithop/MandanGPT"
 }
