--- a/requirements.txt
+++ b/requirements.txt
@@ -31,10 +31,12 @@ jsonpointer==3.0.0
 langchain==0.3.25
 langchain-core==0.3.59
 langchain-google-genai==2.1.4
+langchain-ollama==0.3.2
 langchain-text-splitters==0.3.8
 langsmith==0.3.42
 multidict==6.4.3
 mypy_extensions==1.1.0
+ollama==0.4.8
 orjson==3.10.18
 packaging==24.2
 pathspec==0.12.1
