Update pyprojec.toml, include groups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.28.1"
 python-multipart = "^0.0.20"
 Jinja2 = "^3.1.6"
 itsdangerous = "^2.2.0"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.bot.dependencies]
 aiohttp = "^3.11.0"
