--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,216 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-aiosqlite==0.21.0
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-black==25.1.0
-cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-click==8.1.8
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+airportsdata==20250224
+annotated-types==0.6.0
+anyio==4.6.2.post1
+astor==0.8.1
+attrs==24.2.0
+Babel==2.14.0
+backports.tarfile==1.2.0
+beautifulsoup4==4.12.2
+black==23.12.1
+blake3==1.0.4
+build==1.2.2.post1
+CacheControl==0.14.3
+cachetools==5.5.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+cleo==2.1.0
+click==8.1.7
+cloudpickle==3.1.1
 colorama==0.4.6
+compressed-tensors==0.9.3
+crashtest==0.4.1
+customtkinter==5.2.2
+darkdetect==0.8.0
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+depyf==0.18.0
+dill==0.4.0
+discord-oauth2.py==1.2.2
 discord.py==2.5.2
-dotenv==0.9.9
+diskcache==5.6.3
+distlib==0.3.9
+distro==1.9.0
+dnspython==2.7.0
+docutils==0.20.1
+dulwich==0.22.8
+einops==0.8.1
+email_validator==2.2.0
 fastapi==0.115.12
-filetype==1.2.0
-frozenlist==1.6.0
-google-ai-generativelanguage==0.6.18
-google-api-core==2.24.2
-google-auth==2.40.1
-googleapis-common-protos==1.70.0
-greenlet==3.2.1
-grpcio==1.72.0rc1
-grpcio-status==1.72.0rc1
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
+fastapi-cli==0.0.7
+fastapi-sessions==0.3.2
+fastjsonschema==2.21.1
+filelock==3.18.0
+findpython==0.6.3
+frozenlist==1.5.0
+fsspec==2025.3.0
+gguf==0.14.0
+ghp-import==2.1.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+grpcio==1.68.0
+grpcio-status==1.68.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.6.4
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.30.2
+idna==3.6
+importlib-metadata==7.0.1
+installer==0.7.0
+interegular==0.3.3
+itsdangerous==2.2.0
+jaraco.classes==3.3.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
 Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.25
-langchain-core==0.3.59
-langchain-google-genai==2.1.4
-langchain-ollama==0.3.2
-langchain-text-splitters==0.3.8
-langsmith==0.3.42
-MarkupSafe==3.0.2
-multidict==6.4.3
-mypy_extensions==1.1.0
-ollama==0.4.8
-orjson==3.10.18
-packaging==24.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keyring==25.6.0
+langchain==0.3.8
+langchain-community==0.3.8
+langchain-core==0.3.21
+langchain-google-genai==2.0.5
+langchain-ollama==0.2.0
+langchain-text-splitters==0.3.2
+langgraph==0.2.53
+langgraph-checkpoint==2.0.6
+langgraph-sdk==0.1.36
+langsmith==0.1.146
+lark==1.2.2
+lm-format-enforcer==0.10.11
+Markdown==3.5.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.23.1
+mdurl==0.1.2
+mergedeep==1.3.4
+mistral_common==1.5.4
+mkdocs==1.5.3
+mkdocs-material==9.5.3
+mkdocs-material-extensions==1.3.1
+model2vec==0.4.1
+more-itertools==10.1.0
+mpmath==1.3.0
+msgpack==1.1.0
+msgspec==0.19.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nh3==0.2.15
+ninja==1.11.1.4
+numpy==1.26.4
+ollama==0.4.1
+openai==1.75.0
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-exporter-otlp-proto-http==1.26.0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-semantic-conventions-ai==0.4.3
+orjson==3.10.12
+outlines==0.1.11
+outlines_core==0.1.26
+packaging==25.0
+paginate==0.5.6
+partial-json-parser==0.2.1.1.post5
 pathspec==0.12.1
-platformdirs==4.3.8
-propcache==0.3.1
-proto-plus==1.26.1
-protobuf==6.31.0rc2
+pbs-installer==2025.4.9
+pillow==11.2.1
+pkginfo==1.12.1.2
+platformdirs==4.1.0
+poetry==2.1.3
+poetry-core==2.1.3
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.21.1
+propcache==0.2.0
+proto-plus==1.25.0
+protobuf==4.25.6
+psutil==7.0.0
+py-cpuinfo==9.0.0
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pydantic==2.11.4
-pydantic_core==2.33.2
-python-dotenv==1.1.0
-PyYAML==6.0.2
-requests==2.32.3
+pyasn1_modules==0.4.1
+pycountry==24.6.1
+pydantic==2.10.1
+pydantic-settings==2.6.1
+pydantic_core==2.27.1
+Pygments==2.17.2
+pymdown-extensions==10.7
+pyparsing==3.2.0
+pyproject_hooks==1.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-json-logger==3.3.0
+python-multipart==0.0.20
+pywin32-ctypes==0.2.2
+PyYAML==6.0.1
+pyyaml_env_tag==0.1
+pyzmq==26.4.0
+RapidFuzz==3.13.0
+readme-renderer==42.0
+referencing==0.36.2
+regex==2023.12.25
+requests==2.31.0
 requests-toolbelt==1.0.0
-rsa==4.9.1
+rfc3986==2.0.0
+rich==14.0.0
+rich-toolkit==0.14.1
+rpds-py==0.24.0
+rsa==4.9
+safetensors==0.5.3
+scapy==2.6.1
+scipy==1.15.2
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
-SQLAlchemy==2.0.40
+soupsieve==2.5
+SQLAlchemy==2.0.35
 starlette==0.46.2
-tenacity==9.1.2
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-yarl==1.20.0
+sympy==1.13.1
+tenacity==9.0.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+tomli==2.0.1
+tomlkit==0.13.2
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.51.3
+trove-classifiers==2025.5.9.12
+twine==4.0.2
+typer==0.15.2
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.1.0
+uvicorn==0.34.1
+virtualenv==20.31.2
+vllm==0.8.4
+watchdog==3.0.0
+watchfiles==1.0.5
+websockets==12.0
+wikipedia==1.4.0
+winotify==1.1.0
+wrapt==1.17.2
+yarl==1.18.0
+zipp==3.17.0
 zstandard==0.23.0
