--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ langchain-core = "^0.3.59"
 langchain-ollama = "^0.3.2"
 ollama = "^0.4.8"
 langchain-text-splitters = "^0.3.8"
+langchain-milvus = "^0.1.10"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
