Update sample env to include milvus

--- a/example.env
+++ b/example.env
@@ -33,3 +33,11 @@ HUGGING_FACE_HUB_TOKEN=
 # OAuth2
 DISCORD_APP_CLIENT_ID=
 DISCORD_APP_SECRET=
+
+# Database
+
+MILVUS_HOST=
+MILVUS_PORT=
+MILVUS_USERNAME=
+MILVUS_PWD=
+MILVUS_DATABASE=
