feat: Add Langfuse secrets

--- a/example.env
+++ b/example.env
@@ -35,9 +35,13 @@ DISCORD_APP_CLIENT_ID=
 DISCORD_APP_SECRET=
 
 # Database
-
 MILVUS_HOST=
 MILVUS_PORT=
 MILVUS_USERNAME=
 MILVUS_PWD=
 MILVUS_DATABASE=
+
+# Langfuse
+LANGFUSE_SECRET_KEY=
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_HOST=
