--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ langchain-milvus = "^0.1.10"
 duckduckgo-search = "^8.0.2"
 langchain-community = "^0.3.24"
 langgraph = "^0.4.5"
+langfuse = "^2.60.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
