--- a/milvus-compose.yml
+++ b/milvus-compose.yml
@@ -22,9 +22,9 @@ services:
     environment:
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
-    ports:
-      - "9001:9001"
-      - "9000:9000"
+    # ports:
+    #   - "9001:9001"
+    #   - "9000:9000"
     volumes:
       - minio_data:/minio_data
     command: minio server /minio_data --console-address ":9001"
