feat: Add sample mcp code

--- a/example.env
+++ b/example.env
@@ -45,3 +45,8 @@ MILVUS_DATABASE=
 LANGFUSE_SECRET_KEY=
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_HOST=
+
+# MCP
+GITHUB_TOKEN=
+NOTION_API_KEY=
+NOTION_PAGE_ID=
